# jq_live_query

./: Cargo.toml  README.md  source_me.sh
src/: main.rs
src/app/: app.rs  config.rs  mod.rs
src/app/widgets/: input.rs  jq.rs  json.rs  mod.rs
